--- a/templates/home.html
+++ b/templates/home.html
@@ -31,9 +31,9 @@
                     <div class="card-body">
                         {{i.task}}
                         <span style="position: relative; float: right;">
-                            <a class="btn btn-success"><i class="fa fa-check"></i> Mark as Done</a>
+                            <a href = "{% url 'markComplete' i.pk %}" class="btn btn-success"><i class="fa fa-check"></i> Mark as Done</a>
                             <a class="btn btn-danger"><i class="fa fa-trash"></i></a>
-                            <a class="btn btn-primary"><i class="fa fa-pencil"></i></a>
+                            <a href = "{% url 'editTask' i.pk %}" class="btn btn-primary"><i class="fa fa-pencil"></i></a>
                         </span>
                     </div>
                 </div>
@@ -42,11 +42,16 @@
             <div class="col-md-5 col-lg-5">
                 <h5>Completed Tasks</h5>
                 <!-- List of all the tasks that have completed -->
+                    {% for j in completed_tasks %}
                 <div class="card m-1">
                     <div class="card-body">
-                        This is the completed task.
+                        {{j.task}}
+                        <span style="position: relative; float: right;">
+                            <a href = "{% url 'Undone' j.pk %}" class="btn btn-warning"><i class="fa fa-times"></i> Undone</a>
+                            
                     </div>
                 </div>
+                {% endfor %}
             </div>
         </div>
         <div class="row">
