--- a/templates/home.html
+++ b/templates/home.html
@@ -32,7 +32,7 @@
                         {{i.task}}
                         <span style="position: relative; float: right;">
                             <a href = "{% url 'markComplete' i.pk %}" class="btn btn-success"><i class="fa fa-check"></i> Mark as Done</a>
-                            <a class="btn btn-danger"><i class="fa fa-trash"></i></a>
+                            <a href = "{% url 'deleteTask' i.pk %}" class="btn btn-danger"><i class="fa fa-trash"></i></a>
                             <a href = "{% url 'editTask' i.pk %}" class="btn btn-primary"><i class="fa fa-pencil"></i></a>
                         </span>
                     </div>
